--- a/Pad3/appsettings.json
+++ b/Pad3/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:pad3-test.database.windows.net,1433;Initial Catalog=Pad3Test;Persist Security Info=False;User ID=andrei;Password=iobanii#pad3;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
